Update JSSC version to work with Windows 10, improved About dialog, other minor changes for Java 17